--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "sass-loader": "^6.0.3",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
